# TESTING_EXAMPLES

./: .gitignore  README.md  requirements.txt
first_set_refactoring/: refactoring_techniques.ipynb
flask_pytest_app/: app.py
flask_unittest_app/: app.py  test_unittest.py
pytest_vs_unittest/flask_pytest_app/: test_app.py
static_testing/: static_requirements.txt  static_testing.ipynb
static_testing/ModestInventary/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
static_testing/ModestInventary/inventory_system/: __init__.py  auth.py  cli.py
static_testing/ModestInventary/inventory_system/logic/: discount_calculator.py
static_testing/ModestInventary/inventory_system/persistence/: state_manager.py
static_testing/ModestInventary/inventory_system/utils/: system_caller.py
static_testing/ModestInventary_clean/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
static_testing/ModestInventary_clean/inventory_system/: __init__.py  auth.py  cli.py
static_testing/ModestInventary_clean/inventory_system/logic/: __init__.py  discount_calculator.py
static_testing/ModestInventary_clean/inventory_system/persistence/: __init__.py  state_manager.py
static_testing/ModestInventary_clean/inventory_system/utils/: __init__.py  backup_manager.py
static_testing/ModestInventary_clean/tests/: test_system.py
